--- a/src/components/advanced/sidebar/Sidebar.module.css
+++ b/src/components/advanced/sidebar/Sidebar.module.css
@@ -1,12 +1,16 @@
-.sideBar {
-  height: fit-content;
-  min-height: 100dvh;
-  height: 100dvh;
-  margin-left: 10px;
-  margin-top: 10px;
-  padding: 25px;
-  overflow: scroll;
+.sideBarWrapper {
   position: fixed;
+  overflow: auto;
+}
+
+.sideBar {
+   min-height: calc(100vh - 20px);
+  /* height: fit-content; */
+  margin-left: 10px;
+  margin-block: 10px;
+  padding: 20px;
+  /* overflow-y: auto; */
+  /* position: fixed; */
   width: 249px;
   border-radius: 20px;
   background: linear-gradient(
@@ -14,6 +18,10 @@
     rgba(6, 11, 38, 0.94) 59.3%,
     rgba(26, 31, 55, 0) 100%
   );
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 30px;
 }
 
 .logoWrapper {
@@ -23,6 +31,17 @@
   width: 100%;
 }
 
+.sideBarBottom {
+  background: url("../../../assets/images/sideBarBottomBG.png") center / cover
+      no-repeat,
+    #0075ff;
+  border-radius: 15px;
+  width: 100%;
+  margin-top: auto;
+  /* height is temporary */
+  height: 200px;
+}
+
 .sideBar::-webkit-scrollbar-thumb,
 .sideBarOpen::-webkit-scrollbar-thumb {
   background: var(--primary-black);
@@ -30,7 +49,8 @@
 
 .categoryHeading {
   font-size: 1.5rem;
-  color: var(--primary-black);
+  color: #fff;
+  font-weight: 400;
   margin-bottom: 20px;
 }
 
@@ -43,8 +63,7 @@
 
 .linkWrapper,
 .linkWrapperActive {
-  display: grid;
-  grid-template-columns: 50px 1fr;
+  display: flex;
   align-items: center;
   gap: 10px;
   padding: 12px 16px;
@@ -52,77 +71,56 @@
   cursor: pointer;
   border-radius: 4px;
   border-radius: 15px;
-  background: #1a1f37;
+  transition: all 0.3s ease;
 }
 
 .linkWrapperActive,
 .linkWrapper:hover {
-  box-shadow: 0px 3.5px 5.5px 0px rgba(0, 0, 0, 0.02);
+  color: #2196f3;
+  background: #1a1f37;
+  /* box-shadow: 0px 3.5px 5.5px 0px rgba(0, 0, 0, 0.02); */
 }
 
-.linkWrapper {
-  color: var(--primary-black);
+.linkWrapperActive .iconWrapper,
+.linkWrapper:hover .iconWrapper {
+  background: #0075ff;
+}
+
+.linkWrapper .iconWrapper {
+  background: #1a1f37;
+}
+
+.iconWrapper {
   transition: all 0.3s ease;
-}
 
-.arrowClosed {
-  rotate: -180deg;
-  transition: all 0.5s ease;
-}
-.arrowOpen {
-  rotate: 0deg;
-  transition: all 0.5s ease;
-}
-
-.linkWrapper:hover {
-  background: var(--highlighter);
-  color: #2196f3;
-}
-
-.linkWrapperActive {
-  background: var(--highlighter);
-  color: #2196f3;
-}
-
-.iconWrapper,
-.iconWrapperActive {
+  display: flex;
   border-radius: 12px;
-  width: 25px;
-  height: 25px;
   padding: 8px;
   box-shadow: 0px 3.5px 5.5px 0px rgba(0, 0, 0, 0.02);
 }
 
-.linkWrapper .iconWrapper {
-  background: #0075ff;
+.linkWrapper svg {
+  color: #0075ff;
 }
 
-.linkWrapperActive .iconWrapper {
-  background: #1a1f37;
+.linkWrapperActive svg,
+.linkWrapper:hover svg {
+  color: #fff;
+}
+
+.linkWrapper svg,
+.linkWrapperActive svg {
+  width: 15px;
+  height: 15px;
+  transition: all 0.3s ease;
 }
 
 .linkWrapper a,
-.linkWrapper p,
-.linkWrapperActive a,
-.linkWrapperActive p {
+.linkWrapperActive a {
   color: #fff;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
   text-decoration: none;
-}
-
-.linkWrapper svg {
-  color: #fff;
-}
-
-.linkWrapperActive svg {
-  color: #0075ff;
-}
-
-.linkWrapper svg,
-.linkWrapperActive svg {
-  width: 100%;
-  height: 100%;
 }
