--- a/src/app/layout.module.css
+++ b/src/app/layout.module.css
@@ -6,11 +6,11 @@
   background-size: cover; /* Adjust as needed */
   background-position: center center; /* Adjust as needed */
   background-repeat: no-repeat;
-  height: 100dvh; /* Temporary */
+  height: 100dvh;
 }
 
 .sideBar {
-  width: 310px;
+  width: 280px;
   background: var(--secondry-bg);
   border-right: 1px var(--divider) solid;
 }
