--- a/src/app/layout.module.css
+++ b/src/app/layout.module.css
@@ -3,16 +3,19 @@
   overflow: unset;
   background-image: url("../assets/images/mainLayoutBG.png");
   background-color: #060b26;
-  background-size: cover; /* Adjust as needed */
-  background-position: center center; /* Adjust as needed */
+  background-size: cover;
+  background-position: center center;
   background-repeat: no-repeat;
   height: 100dvh;
 }
 
 .sideBar {
-  width: 280px;
+  width: 270px;
+  margin: 10px;
+  margin-right: 0;
   background: var(--secondry-bg);
   border-right: 1px var(--divider) solid;
+  overflow: hidden;
 }
 
 .sideBar,
@@ -25,7 +28,7 @@
 }
 
 .outlet {
-  padding: 30px;
+  padding: 15px;
   max-width: 1440px;
   margin-inline: auto;
 }
@@ -43,7 +46,7 @@
   }
 
   .outlet {
-    padding-inline: 15px;
+    padding-inline: 10px;
   }
 
   .sideBar,
