--- a/src/components/advanced/sidebar/Sidebar.module.css
+++ b/src/components/advanced/sidebar/Sidebar.module.css
@@ -1,17 +1,34 @@
 .sideBarWrapper {
   position: fixed;
-  overflow: auto;
+  top: 10px;
+  left: 0;
+  height: calc(100% - 20px);
+  overflow-y: auto;
+  
+/* todo : fix the border radius to appear always  */
+}
+
+.sideBarWrapper::-webkit-scrollbar {
+  width: 2px;
+  /* display the scrollbar  */
+  display: none;
+}
+
+.sideBarWrapper::-webkit-scrollbar-thumb {
+  background-color: #333;
+  border-radius: 6px;
+}
+
+.sideBarWrapper::-webkit-scrollbar-track {
+  background-color: #eee;
 }
 
 .sideBar {
-   min-height: calc(100vh - 20px);
-  /* height: fit-content; */
+  min-height: calc(100vh - 40px);
   margin-left: 10px;
   margin-block: 10px;
   padding: 20px;
-  /* overflow-y: auto; */
-  /* position: fixed; */
-  width: 249px;
+  width: 270px;
   border-radius: 20px;
   background: linear-gradient(
     112deg,
@@ -38,7 +55,6 @@
   border-radius: 15px;
   width: 100%;
   margin-top: auto;
-  /* height is temporary */
   height: 200px;
 }
 
@@ -78,7 +94,6 @@
 .linkWrapper:hover {
   color: #2196f3;
   background: #1a1f37;
-  /* box-shadow: 0px 3.5px 5.5px 0px rgba(0, 0, 0, 0.02); */
 }
 
 .linkWrapperActive .iconWrapper,
@@ -124,3 +139,22 @@
   line-height: normal;
   text-decoration: none;
 }
+
+/* .sideBarWrapper {
+  position: fixed;
+  top: 10px;
+  left: 10px;
+  height: calc(100% - 20px);
+  border-radius: 4px;
+  background: red;
+  width: 200px;
+  overflow-y: auto;
+}
+
+.content {
+  background: lime;
+  height: 300vh;
+  margin: 20px;
+  padding: 20px;
+  overflow-y: auto;
+} */
