--- a/src/components/advanced/layoutWrapper/LayoutWrapper.module.css
+++ b/src/components/advanced/layoutWrapper/LayoutWrapper.module.css
@@ -1,7 +1,7 @@
 .mainLayout {
     display: flex;
     overflow: unset;
-    background-image: url("../../assets/images/mainLayoutBG.png");
+    background-image: url("../../../assets/images/mainLayoutBG.png");
     background-color: #060b26;
     background-size: cover;
     background-position: center center;
