--- a/src/components/advanced/navbar/Navbar.module.css
+++ b/src/components/advanced/navbar/Navbar.module.css
@@ -2,6 +2,7 @@
   padding-top: 20px;
   margin-bottom: 1.875rem;
   transition: all 0.1s ease;
+  position: relative;
 }
 
 .navBarScrolled,
@@ -14,14 +15,26 @@
 }
 
 .navBarScrolled {
-  transition: all 0.1s ease;
   backdrop-filter: blur(60px);
-
   position: fixed;
-  /* top: 0; */
   z-index: 23;
-  width: 100%;
-  height: 50px;
+
+  transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  box-shadow: rgba(255, 255, 255, 0.9) 0rem 0rem 0.0625rem 0.0625rem inset,
+    rgba(0, 0, 0, 0.05) 0rem 1.25rem 1.6875rem 0rem;
+  backdrop-filter: blur(2.625rem);
+  color: rgb(255, 255, 255);
+  top: 0.75rem;
+  right: 0px;
+  width: calc(100% - 300px);
+  /* left: 10px;
+  right: 10px; */
+  min-height: 4rem;
+  border-radius: 1.25rem;
+  padding: 20px;
+  background-color: transparent !important;
+  border-color: rgba(226, 232, 240, 0.3) !important;
+  margin-inline: 15px;
 }
 
 .hamburger,
@@ -30,6 +43,11 @@
 }
 
 @media screen and (max-width: 768px) {
+  .navBarScrolled {
+    width: calc(100% - 20px);
+    right: -5px;
+  }
+
   .hamburger,
   .hamburgerActive {
     position: relative;
