--- a/src/components/advanced/navbar/Navbar.module.css
+++ b/src/components/advanced/navbar/Navbar.module.css
@@ -18,7 +18,6 @@
   backdrop-filter: blur(60px);
   position: fixed;
   z-index: 23;
-
   transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
   box-shadow: rgba(255, 255, 255, 0.9) 0rem 0rem 0.0625rem 0.0625rem inset,
     rgba(0, 0, 0, 0.05) 0rem 1.25rem 1.6875rem 0rem;
@@ -27,14 +26,86 @@
   top: 0.75rem;
   right: 0px;
   width: calc(100% - 300px);
-  /* left: 10px;
-  right: 10px; */
   min-height: 4rem;
   border-radius: 1.25rem;
   padding: 20px;
   background-color: transparent !important;
   border-color: rgba(226, 232, 240, 0.3) !important;
   margin-inline: 15px;
+}
+
+.nav {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+}
+
+.searchFieldWrapper {
+  padding: 10px;
+  border-radius: 15px;
+  border: 0.5px solid rgba(226, 232, 240, 0.3);
+  background: #0f1535;
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  transition: 0.3s all ease;
+}
+
+.searchFieldWrapper svg {
+  color: #2d3748;
+  cursor: pointer;
+  transition: 0.3s all ease;
+}
+
+.searchFieldWrapper input {
+  outline: none;
+  background: transparent;
+  border: none;
+  color: #fff;
+}
+
+.searchFieldWrapper input::placeholder {
+  color: #a0aec0;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.searchFieldWrapper:focus-within {
+  border: 0.5px solid rgba(226, 232, 240, 0.6);
+}
+
+.signin,
+.navIcon {
+  cursor: pointer;
+  color: #fff;
+  transition: 0.3s all ease;
+}
+
+.signin {
+  display: flex;
+  align-items: center;
+  gap: 4px;
+}
+
+.signin:hover,
+.navIcon:hover,
+.searchFieldWrapper svg:hover {
+  color: #0075ff;
+}
+
+.signin svg,
+.navIcon,
+.hamburger,
+.hamburgerActive {
+  width: 15px;
+  height: 15px;
+}
+
+.signin p {
+  font-size: 12px;
+  font-weight: 400;
+  line-height: normal;
 }
 
 .hamburger,
@@ -55,22 +126,26 @@
     cursor: pointer;
     display: block;
   }
+
   .hamburger span,
   .hamburgerActive span {
     display: block;
-    width: 30px;
-    height: 3px;
+    width: 15px;
+    height: 1px;
     background-color: #fff;
-    margin: 5px 0;
+    margin: 3px 0;
     transition: all 0.3s ease;
   }
+
   .hamburgerActive span:nth-child(1) {
-    transform: rotate(45deg) translate(6px, 6px);
+    transform: rotate(45deg) translate(2px, 2px);
   }
+
   .hamburgerActive span:nth-child(2) {
     opacity: 0;
   }
+
   .hamburgerActive span:nth-child(3) {
-    transform: rotate(-45deg) translate(5px, -5px);
+    transform: rotate(-45deg) translate(3.5px, -3.5px);
   }
 }
