--- a/src/app/(auth)/layout.module.css
+++ b/src/app/(auth)/layout.module.css
@@ -41,7 +41,7 @@
 
 .content {
   height: 100%;
-  padding-inline: 40px;
+  padding:  40px;
   display: flex;
   flex-direction: column;
   align-items: center;
