--- a/src/app/(main)/home/HomeView.module.css
+++ b/src/app/(main)/home/HomeView.module.css
@@ -1,5 +1,6 @@
 .infoCards,
-.userDetails {
+.userDetails,
+.salesAndUsers {
   margin-bottom: 25px;
 }
 
@@ -12,16 +13,13 @@
 
 .userDetails > :nth-child(1) {
   grid-column: span 5;
-
 }
 .userDetails > :nth-child(2) {
   grid-column: span 3;
-
 }
 .userDetails > :nth-child(3) {
   grid-column: span 4;
-
 }
 
-@media screen and (max-width: 1300px) {
-}
+/* @media screen and (max-width: 1300px) {
+} */
