--- a/src/app/(main)/home/HomeView.module.css
+++ b/src/app/(main)/home/HomeView.module.css
@@ -35,12 +35,36 @@
   grid-column: span 5;
 }
 
+.projectsAndOrders {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  gap: 20px;
+}
+
+.projectsAndOrders > :nth-child(1) {
+  grid-column: span 8;
+}
+
+.projectsAndOrders > :nth-child(2) {
+  grid-column: span 4;
+}
+
 @media screen and (max-width: 1300px) {
   .salesAndUsers > :nth-child(1) {
     grid-column: span 12;
   }
 
   .salesAndUsers > :nth-child(2) {
+    grid-column: span 12;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .projectsAndOrders > :nth-child(1) {
+    grid-column: span 12;
+  }
+
+  .projectsAndOrders > :nth-child(2) {
     grid-column: span 12;
   }
 }
