--- a/src/app/(main)/home/components/satisfaction/Satisfaction.module.css
+++ b/src/app/(main)/home/components/satisfaction/Satisfaction.module.css
@@ -11,6 +11,7 @@
 }
 
 .basedOn {
+  margin-top: -40px;
   padding: 15px;
   border-radius: 20px;
   background: linear-gradient(
@@ -48,8 +49,8 @@
 }
 
 .progressBackground {
-    background: #2196f3;
-    position: absolute;
+  background: #2196f3;
+  position: absolute;
   top: 46%;
   left: 50%;
   transform: translate(-50%, -50%);
