--- a/src/app/(main)/billing/BillingView.module.css
+++ b/src/app/(main)/billing/BillingView.module.css
@@ -1,4 +1,24 @@
 .cardAndInvoices {
   margin-bottom: 20px;
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
   gap: 20px;
+}
+
+.cardAndInvoices > :nth-child(1) {
+  grid-column: span 7;
+}
+
+.cardAndInvoices > :nth-child(2) {
+  grid-column: span 5;
+}
+
+@media screen and (max-width: 1200px) {
+  .cardAndInvoices > :nth-child(1) {
+    grid-column: span 12;
+  }
+
+  .cardAndInvoices > :nth-child(2) {
+    grid-column: span 12;
+  }
 }
