--- a/src/app/(main)/billing/BillingView.module.css
+++ b/src/app/(main)/billing/BillingView.module.css
@@ -17,11 +17,13 @@
 }
 
 @media screen and (max-width: 1200px) {
-  .cardAndInvoices > :nth-child(1) {
+  .cardAndInvoices > :nth-child(1),
+  .billingAndTransactions > :nth-child(1) {
     grid-column: span 12;
   }
 
-  .cardAndInvoices > :nth-child(2) {
+  .cardAndInvoices > :nth-child(2),
+  .billingAndTransactions > :nth-child(2) {
     grid-column: span 12;
   }
 }
