--- a/src/app/(main)/billing/components/transactions/Transactions.module.css
+++ b/src/app/(main)/billing/components/transactions/Transactions.module.css
@@ -2,7 +2,6 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-bottom: 20px;
 }
 
 .heading h5 {
@@ -25,9 +24,15 @@
 
 .categoryTitle {
   color: #a0aec0;
-  margin-bottom: 20px;
+  margin-block: 20px;
   font-weight: 400;
   line-height: normal;
+}
+
+.transGrid {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 20px;
 }
 
 .transaction {
