--- a/src/app/(main)/billing/components/transactions/Transactions.module.css
+++ b/src/app/(main)/billing/components/transactions/Transactions.module.css
@@ -53,6 +53,7 @@
   width: 35px;
   height: 35px;
   border-radius: 50%;
+  flex-shrink: 0;
   display: flex;
   align-items: center;
   justify-content: center;
