--- a/src/app/(main)/profile/ProfileView.module.css
+++ b/src/app/(main)/profile/ProfileView.module.css
@@ -1,3 +1,21 @@
-.userDetails {
+.userDetails,
+.welcomeWrapper {
   margin-bottom: 20px;
+}
+
+.welcomeWrapper {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: 1fr;
+  gap: 20px;
+}
+
+.welcomeWrapper > :nth-child(1) {
+  grid-column: span 3;
+}
+.welcomeWrapper > :nth-child(2) {
+  grid-column: span 5;
+}
+.welcomeWrapper > :nth-child(3) {
+  grid-column: span 4;
 }
