--- a/src/app/(main)/profile/components/welcome/Welcome.module.css
+++ b/src/app/(main)/profile/components/welcome/Welcome.module.css
@@ -34,3 +34,9 @@
   font-size: 15px;
   transition: all 0.3s ease;
 }
+
+@media screen and (max-width: 768px) {
+  .record {
+    margin-top: 60px;
+  }
+}
