--- a/src/app/(main)/profile/components/carInfo/CarInfo.module.css
+++ b/src/app/(main)/profile/components/carInfo/CarInfo.module.css
@@ -9,13 +9,17 @@
   margin-top: 5px;
 }
 
+.carGrid {
+  display: grid;
+  grid-template-columns: 200px 1fr;
+  gap: 20px;
+}
+
 .progressWrapper {
   display: flex;
   justify-content: center;
   align-items: center;
   width: fit-content;
-  /* width: 100%;
-    height: 100%; */
   position: relative;
 }
 
@@ -45,7 +49,72 @@
 .score {
   text-align: center;
   position: absolute;
-  top: 50%;
+  top: 45%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+.time {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.time p {
+  color: #8f9bba;
+  font-weight: 400;
+  letter-spacing: -0.28px;
+}
+
+.carInfoGrid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+}
+
+.info {
+  border-radius: 20px;
+  background: linear-gradient(
+    127deg,
+    rgba(6, 11, 38, 0.74) 28.26%,
+    rgba(26, 31, 55, 0.5) 91.2%
+  );
+  backdrop-filter: blur(25px);
+  padding: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.info p {
+  margin-bottom: 5px;
+  color: #a0aec0;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.info h4 {
+  font-size: 22px;
+  font-weight: 700;
+  line-height: normal;
+}
+
+@media screen and (max-width: 991px) {
+  .titles {
+    text-align: center;
+  }
+
+  .carGrid {
+    grid-template-columns: 1fr;
+  }
+
+  .progressWrapper {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .carInfoGrid {
+    grid-template-columns: 1fr;
+  }
 }
