--- a/src/app/(main)/profile/ProfileView.module.css
+++ b/src/app/(main)/profile/ProfileView.module.css
@@ -3,17 +3,20 @@
   margin-bottom: 20px;
 }
 
-.welcomeWrapper {
+.welcomeWrapper,
+.projects {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   grid-template-rows: 1fr;
   gap: 20px;
 }
 
-.welcomeWrapper > :nth-child(1) {
+.welcomeWrapper > :nth-child(1),
+.projects > :nth-child(1) {
   grid-column: span 5;
 }
-.welcomeWrapper > :nth-child(2) {
+.welcomeWrapper > :nth-child(2),
+.projects > :nth-child(2) {
   grid-column: span 7;
 }
 .welcomeWrapper > :nth-child(3) {
