--- a/src/app/(main)/profile/ProfileView.module.css
+++ b/src/app/(main)/profile/ProfileView.module.css
@@ -15,15 +15,26 @@
 .projects > :nth-child(1) {
   grid-column: span 5;
 }
+
 .welcomeWrapper > :nth-child(2),
 .projects > :nth-child(2) {
   grid-column: span 7;
 }
+
 .welcomeWrapper > :nth-child(3) {
   grid-column: span 12;
 }
 
-/* TODO : this is temporary  */
+@media screen and (max-width: 991px) {
+  .projects > :nth-child(1) {
+    grid-column: span 12;
+  }
+
+  .projects > :nth-child(2) {
+    grid-column: span 12;
+  }
+}
+
 @media screen and (max-width: 576px) {
   .welcomeWrapper > :nth-child(1) {
     grid-column: span 12;
