--- a/src/app/(main)/profile/components/projects/Projects.module.css
+++ b/src/app/(main)/profile/components/projects/Projects.module.css
@@ -10,6 +10,12 @@
   margin-block: 5px 22px;
 }
 
+.projectsGrid {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 40px;
+}
+
 .card img {
   width: 100%;
   height: 276px;
