--- a/src/components/advanced/loader/LoaderWrapper.module.css
+++ b/src/components/advanced/loader/LoaderWrapper.module.css
@@ -17,7 +17,7 @@
     padding: 8px;
     aspect-ratio: 1;
     border-radius: 50%;
-    background: #25b09b;
+    background: #fff;
     --_m: 
       conic-gradient(#0000 10%,#000),
       linear-gradient(#000 0 0) content-box;
